log
Wed, Mar 19, 2025  8:44:08 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:05:52 AM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:52:7: error: parameter names (without types) in function declaration [-Werror]
       void pushBack(L, valorDeK);// VA EL VALOR DE K O PODRIA reservar memoria directamente en cada k?
       ^~~~
exercises.c:46:10: error: variable 'elemento' set but not used [-Werror=unused-but-set-variable]
    void* elemento = first(L);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d9f1a74
Wed, Mar 19, 2025  9:08:08 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:46:10: error: variable 'elemento' set but not used [-Werror=unused-but-set-variable]
    void* elemento = first(L);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c208b95
Wed, Mar 19, 2025  9:08:50 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
d8abdf7
Wed, Mar 19, 2025  9:09:30 AM: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
c1e2899
Wed, Mar 19, 2025  9:15:50 AM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:65:9: error: variable or field 'elemento' declared void
    void elemento = first(L);
         ^~~~~~~~
exercises.c:65:20: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    void elemento = first(L);
                    ^~~~~
exercises.c:66:19: error: comparison between pointer and integer [-Werror]
    while(elemento != NULL){
                   ^~
exercises.c:68:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       elemento = next(L);
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
ffb3910
Wed, Mar 19, 2025  9:18:56 AM: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
04f1f68
Wed, Mar 19, 2025  9:22:34 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
3d21bf8
Wed, Mar 19, 2025  9:23:07 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
13f3d04
Wed, Mar 19, 2025  9:25:46 AM: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:68:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += elemento;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
1ce346a
Wed, Mar 19, 2025  9:26:47 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
e035c39
Wed, Mar 19, 2025  9:36:19 AM: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
bbb67e9
vi., 21 de mar. de 2025 22:38:25: 
 tests:  3|2
total_score: 40/70
a159699
vi., 21 de mar. de 2025 23:37:40: 
 exercises.c | 74 +++++++++++++++++++++++++++++++++++++++++++------------------
 1 file changed, 53 insertions(+), 21 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:139:24: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
       void* elemento = cadena[t];
                        ^~~~~~
exercises.c:141:16: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       elemento = cadena[contador -1];
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
5a77664
vi., 21 de mar. de 2025 23:38:50: 
 exercises.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  4|1
total_score: 50/70
d5eed71
vi., 21 de mar. de 2025 23:41:41: 
 exercises.c | 57 ++++++++++++++++++++-------------------------------------
 1 file changed, 20 insertions(+), 37 deletions(-)
 tests:  3|2
total_score: 40/70
9304fc0
vi., 21 de mar. de 2025 23:51:07: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  3|2
total_score: 40/70
7b8cd72
